[gd_scene load_steps=5 format=3 uid="uid://bja3k5auq7iyd"]

[ext_resource type="Script" path="res://PlayerSwipe.gd" id="1_invgy"]
[ext_resource type="Script" path="res://GameManager.gd" id="1_mly58"]
[ext_resource type="Script" path="res://Watermelon.gd" id="2_4igom"]
[ext_resource type="Script" path="res://WatermelonSpawner.gd" id="3_fx6j2"]

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_mly58")

[node name="Timer" type="Timer" parent="."]

[node name="PlayerSwipe" type="Node2D" parent="."]
script = ExtResource("1_invgy")

[node name="WatermelonSpawner" type="Node2D" parent="."]
script = ExtResource("3_fx6j2")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GlucoseBar" type="ProgressBar" parent="UI"]
offset_right = 4.0
offset_bottom = 27.0
metadata/_edit_use_anchors_ = true

[node name="HungerBar" type="ProgressBar" parent="UI"]
offset_right = 4.0
offset_bottom = 27.0
metadata/_edit_use_anchors_ = true

[node name="TimerLabel" type="ProgressBar" parent="UI"]
offset_right = 4.0
offset_bottom = 27.0
metadata/_edit_use_anchors_ = true

[node name="Background" type="Sprite2D" parent="."]

[node name="Watermelon" type="RigidBody2D" parent="."]
script = ExtResource("2_4igom")

[node name="Sprite2D" type="Sprite2D" parent="Watermelon"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Watermelon"]
